Work in progress - websocket stream of ticket changes

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -143,6 +143,12 @@
     <script src="scripts/app/admin/tracker/tracker.js"></script>
     <script src="scripts/app/admin/tracker/tracker.controller.js"></script>
     <script src="scripts/components/tracker/tracker.service.js"></script>
+    <script src="scripts/app/entities/ticket/ticket.js"></script>
+    <script src="scripts/app/entities/ticket/ticket.controller.js"></script>
+    <script src="scripts/app/entities/ticket/ticket-dialog.controller.js"></script>
+    <script src="scripts/app/entities/ticket/ticket-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/ticket/ticket-detail.controller.js"></script>
+    <script src="scripts/components/entities/ticket/ticket.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
