Generate queue entity

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -149,6 +149,12 @@
     <script src="scripts/app/entities/ticket/ticket-delete-dialog.controller.js"></script>
     <script src="scripts/app/entities/ticket/ticket-detail.controller.js"></script>
     <script src="scripts/components/entities/ticket/ticket.service.js"></script>
+    <script src="scripts/app/entities/queuedForUpdate/queuedForUpdate.js"></script>
+    <script src="scripts/app/entities/queuedForUpdate/queuedForUpdate.controller.js"></script>
+    <script src="scripts/app/entities/queuedForUpdate/queuedForUpdate-dialog.controller.js"></script>
+    <script src="scripts/app/entities/queuedForUpdate/queuedForUpdate-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/queuedForUpdate/queuedForUpdate-detail.controller.js"></script>
+    <script src="scripts/components/entities/queuedForUpdate/queuedForUpdate.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
