Generate QueueSource entity

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -155,6 +155,12 @@
     <script src="scripts/app/entities/queuedForUpdate/queuedForUpdate-delete-dialog.controller.js"></script>
     <script src="scripts/app/entities/queuedForUpdate/queuedForUpdate-detail.controller.js"></script>
     <script src="scripts/components/entities/queuedForUpdate/queuedForUpdate.service.js"></script>
+    <script src="scripts/app/entities/queueSource/queueSource.js"></script>
+    <script src="scripts/app/entities/queueSource/queueSource.controller.js"></script>
+    <script src="scripts/app/entities/queueSource/queueSource-dialog.controller.js"></script>
+    <script src="scripts/app/entities/queueSource/queueSource-delete-dialog.controller.js"></script>
+    <script src="scripts/app/entities/queueSource/queueSource-detail.controller.js"></script>
+    <script src="scripts/components/entities/queueSource/queueSource.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
