Fix REST endpoints - LocalDateTime -> ZonedDateTime

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -161,6 +161,7 @@
     <script src="scripts/app/entities/queueSource/queueSource-delete-dialog.controller.js"></script>
     <script src="scripts/app/entities/queueSource/queueSource-detail.controller.js"></script>
     <script src="scripts/components/entities/queueSource/queueSource.service.js"></script>
+    <script src="scripts/components/entities/testentity/testentity.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
