--- a/src/main/webapp/scripts/app/entities/ticket/ticket-dialog.html
+++ b/src/main/webapp/scripts/app/entities/ticket/ticket-dialog.html
@@ -67,6 +67,10 @@
                     </span>
             </div>
         </div>
+        <div class="form-group">
+            <label class="control-label" for="field_flagged">Flagged</label>
+            <input type="checkbox" class="form-control" name="flaggedfield" id="field_flagged" ng-model="ticket.flagged"/>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="clear()">
