--- a/src/main/webapp/scripts/app/entities/ticket/tickets.html
+++ b/src/main/webapp/scripts/app/entities/ticket/tickets.html
@@ -37,6 +37,8 @@
                     <td>{{ticket.jiraKey}}</td>
                     <td>{{ticket.jiraTitle}}</td>
                     <td>{{ticket.stormTitle}}</td>
+                    <td>{{ticket.jiraStatus}}</td>
+                    <td>{{ticket.stormStatus}}</td>
                     <td>{{ticket.jiraLastUpdated | date:'mediumDate'}}</td>
                     <td>{{ticket.stormLastUpdated | date:'mediumDate'}}</td>
                     <td>{{ticket.mutedUntil | date:'mediumDate'}}</td>
