Dashboard GUI basic POC

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -134,8 +134,6 @@
     <script src="scripts/app/admin/user-management/user-management.js"></script>
     <script src="scripts/app/entities/entity.js"></script>
     <script src="scripts/app/error/error.js"></script>
-    <script src="scripts/app/main/main.js"></script>
-    <script src="scripts/app/main/main.controller.js"></script>
     <script src="scripts/components/auth/services/sessions.service.js"></script>
     <script src="scripts/components/auth/provider/auth.session.service.js"></script>
     <script src="scripts/app/account/sessions/sessions.js"></script>
@@ -161,6 +159,8 @@
     <script src="scripts/app/entities/queueSource/queueSource-delete-dialog.controller.js"></script>
     <script src="scripts/app/entities/queueSource/queueSource-detail.controller.js"></script>
     <script src="scripts/components/entities/queueSource/queueSource.service.js"></script>
+    <script src="scripts/app/dashboard/dashboard.js"></script>
+    <script src="scripts/app/dashboard/dashboard.controller.js"></script>
     <!-- endbuild -->
 </body>
 </html>
