--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -161,6 +161,7 @@
     <script src="scripts/components/entities/queueSource/queueSource.service.js"></script>
     <script src="scripts/app/dashboard/dashboard.js"></script>
     <script src="scripts/app/dashboard/dashboard.controller.js"></script>
+    <script src="scripts/components/dashboard/dashboard.service.js"></script>
     <!-- endbuild -->
 </body>
 </html>
