--- a/src/main/webapp/scripts/app/dashboard/dashboard.html
+++ b/src/main/webapp/scripts/app/dashboard/dashboard.html
@@ -4,13 +4,14 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <!-- TODO: Add filtering buttons -->
+                <button ng-disabled="!warn" class="btn btn-primary" ng-click="loadErr()">Waiting SSE</button>
+                <button ng-disabled="warn" class="btn btn-primary" ng-click="loadWarn()">Differing status</button>
             </div>
         </div>
     </div>
     <br/>
     <div class="table-responsive">
-        <table class="jh-table table table-striped">
+        <table class="jh-table table">
             <thead>
                 <tr>
                     <th><span>StormKey</span></th>
@@ -18,11 +19,6 @@
                     <th><span>JiraTitle</span></th>
                     <th><span>JiraStatus</span></th>
                     <th><span>StormStatus</span></th>
-                    <th><span>JiraLastUpdated</span></th>
-                    <th><span>StormLastUpdated</span></th>
-                    <th><span>MutedUntil</span></th>
-                    <th><span>Flagged</span></th>
-                    <th></th>
                 </tr>
             </thead>
             <tbody>
@@ -32,32 +28,6 @@
                     <td>{{ticket.jiraTitle}}</td>
                     <td>{{ticket.jiraStatus}}</td>
                     <td>{{ticket.stormStatus}}</td>
-                    <td>{{ticket.jiraLastUpdated | date:'mediumDate'}}</td>
-                    <td>{{ticket.stormLastUpdated | date:'mediumDate'}}</td>
-                    <td>{{ticket.mutedUntil | date:'mediumDate'}}</td>
-                    <td>{{ticket.flagged}}</td>
-                    <td class="text-right">
-                        <div class="btn-group flex-btn-group-container">
-                            <button type="submit"
-                                    ui-sref="ticket.detail({id:ticket.id})"
-                                    class="btn btn-info btn-sm">
-                                <span class="glyphicon glyphicon-eye-open"></span>
-                                <span class="hidden-xs hidden-sm"></span>
-                            </button>
-                            <button type="submit"
-                                    ui-sref="ticket.edit({id:ticket.id})"
-                                    class="btn btn-primary btn-sm">
-                                <span class="glyphicon glyphicon-pencil"></span>
-                                <span class="hidden-xs hidden-sm"></span>
-                            </button>
-                            <button type="submit"
-                                    ui-sref="ticket.delete({id:ticket.id})"
-                                    class="btn btn-danger btn-sm">
-                                <span class="glyphicon glyphicon-remove-circle"></span>
-                                <span class="hidden-xs hidden-sm"></span>
-                            </button>
-                        </div>
-                    </td>
                 </tr>
             </tbody>
         </table>
