--- a/src/main/webapp/scripts/app/entities/ticket/ticket-detail.html
+++ b/src/main/webapp/scripts/app/entities/ticket/ticket-detail.html
@@ -1,4 +1,3 @@
-
 <div>
     <h2><span>Ticket</span> {{ticket.id}}</h2>
     <div class="table-responsive">
@@ -63,7 +62,7 @@
                     <span>JiraLastUpdated</span>
                 </td>
                 <td>
-                    <span class="form-control-static">{{ticket.jiraLastUpdated | date:'mediumDate'}}</span>
+                    <span class="form-control-static">{{ticket.jiraLastUpdated | date:'medium'}}</span>
                 </td>
             </tr>
             <tr>
@@ -71,7 +70,7 @@
                     <span>StormLastUpdated</span>
                 </td>
                 <td>
-                    <span class="form-control-static">{{ticket.stormLastUpdated | date:'mediumDate'}}</span>
+                    <span class="form-control-static">{{ticket.stormLastUpdated | date:'medium'}}</span>
                 </td>
             </tr>
             <tr>
