--- a/src/main/webapp/scripts/app/entities/ticket/tickets.html
+++ b/src/main/webapp/scripts/app/entities/ticket/tickets.html
@@ -4,10 +4,10 @@
     <div class="container-fluid">
         <div class="row">
             <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="ticket.new" >
+                <button class="btn btn-primary" ui-sref="ticket.new">
                     <span class="glyphicon glyphicon-plus"></span>
                     <span
-                       >Create new Ticket
+                    >Create new Ticket
                     </span>
                 </button>
             </div>
@@ -17,55 +17,55 @@
     <div class="table-responsive">
         <table class="jh-table table table-striped">
             <thead>
-                <tr>
-                    <th><span>ID</span></th>
-                    <th><span>StormKey</span></th>
-                    <th><span>JiraKey</span></th>
-                    <th><span>JiraTitle</span></th>
-                    <th><span>StormTitle</span></th>
-                    <th><span>JiraLastUpdated</span></th>
-                    <th><span>StormLastUpdated</span></th>
-                    <th><span>MutedUntil</span></th>
-                    <th><span>Flagged</span></th>
-                    <th></th>
-                </tr>
+            <tr>
+                <th><span>ID</span></th>
+                <th><span>StormKey</span></th>
+                <th><span>JiraKey</span></th>
+                <th><span>JiraTitle</span></th>
+                <th><span>StormTitle</span></th>
+                <th><span>JiraLastUpdated</span></th>
+                <th><span>StormLastUpdated</span></th>
+                <th><span>MutedUntil</span></th>
+                <th><span>Flagged</span></th>
+                <th></th>
+            </tr>
             </thead>
             <tbody>
-                <tr ng-repeat="ticket in tickets track by ticket.id">
-                    <td><a ui-sref="ticket.detail({id:ticket.id})">{{ticket.id}}</a></td>
-                    <td>{{ticket.stormKey}}</td>
-                    <td>{{ticket.jiraKey}}</td>
-                    <td>{{ticket.jiraTitle}}</td>
-                    <td>{{ticket.stormTitle}}</td>
-                    <td>{{ticket.jiraStatus}}</td>
-                    <td>{{ticket.stormStatus}}</td>
-                    <td>{{ticket.jiraLastUpdated | date:'mediumDate'}}</td>
-                    <td>{{ticket.stormLastUpdated | date:'mediumDate'}}</td>
-                    <td>{{ticket.mutedUntil | date:'mediumDate'}}</td>
-                    <td>{{ticket.flagged}}</td>
-                    <td class="text-right">
-                        <div class="btn-group flex-btn-group-container">
-                            <button type="submit"
-                                    ui-sref="ticket.detail({id:ticket.id})"
-                                    class="btn btn-info btn-sm">
-                                <span class="glyphicon glyphicon-eye-open"></span>
-                                <span class="hidden-xs hidden-sm"></span>
-                            </button>
-                            <button type="submit"
-                                    ui-sref="ticket.edit({id:ticket.id})"
-                                    class="btn btn-primary btn-sm">
-                                <span class="glyphicon glyphicon-pencil"></span>
-                                <span class="hidden-xs hidden-sm"></span>
-                            </button>
-                            <button type="submit"
-                                    ui-sref="ticket.delete({id:ticket.id})"
-                                    class="btn btn-danger btn-sm">
-                                <span class="glyphicon glyphicon-remove-circle"></span>
-                                <span class="hidden-xs hidden-sm"></span>
-                            </button>
-                        </div>
-                    </td>
-                </tr>
+            <tr ng-repeat="ticket in tickets track by ticket.id">
+                <td><a ui-sref="ticket.detail({id:ticket.id})">{{ticket.id}}</a></td>
+                <td>{{ticket.stormKey}}</td>
+                <td>{{ticket.jiraKey}}</td>
+                <td>{{ticket.jiraTitle}}</td>
+                <td>{{ticket.stormTitle}}</td>
+                <td>{{ticket.jiraStatus}}</td>
+                <td>{{ticket.stormStatus}}</td>
+                <td>{{ticket.jiraLastUpdated | date:'medium'}}</td>
+                <td>{{ticket.stormLastUpdated | date:'medium'}}</td>
+                <td>{{ticket.mutedUntil | date:'mediumDate'}}</td>
+                <td>{{ticket.flagged}}</td>
+                <td class="text-right">
+                    <div class="btn-group flex-btn-group-container">
+                        <button type="submit"
+                                ui-sref="ticket.detail({id:ticket.id})"
+                                class="btn btn-info btn-sm">
+                            <span class="glyphicon glyphicon-eye-open"></span>
+                            <span class="hidden-xs hidden-sm"></span>
+                        </button>
+                        <button type="submit"
+                                ui-sref="ticket.edit({id:ticket.id})"
+                                class="btn btn-primary btn-sm">
+                            <span class="glyphicon glyphicon-pencil"></span>
+                            <span class="hidden-xs hidden-sm"></span>
+                        </button>
+                        <button type="submit"
+                                ui-sref="ticket.delete({id:ticket.id})"
+                                class="btn btn-danger btn-sm">
+                            <span class="glyphicon glyphicon-remove-circle"></span>
+                            <span class="hidden-xs hidden-sm"></span>
+                        </button>
+                    </div>
+                </td>
+            </tr>
             </tbody>
         </table>
     </div>
